// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`awsSecretSources with no containers 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "labels": Object {
      "label_name": "label_value",
    },
    "name": "jobNamePrefix_value-object_name-latestCommit_value",
  },
  "spec": Object {
    "activeDeadlineSeconds": 1234,
    "backoffLimit": 1234,
    "completionMode": "NonIndexed",
    "completions": 1,
    "parallelism": 1,
    "template": Object {
      "metadata": Object {
        "labels": Object {
          "builder": "jobNamePrefix_value-object_name-latestCommit_value",
        },
        "name": "jobNamePrefix_value-object_name-latestCommit_value",
      },
      "spec": Object {
        "containers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "TYPE",
                "value": "type_value",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "imagePrefix_valuepost-builder:buildNumber_value",
            "imagePullPolicy": "Always",
            "name": "post-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/timer",
                "name": "timer",
                "readOnly": true,
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
            ],
          },
        ],
        "initContainers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "URL",
                "value": "url_value",
              },
              Object {
                "name": "BRANCH",
                "value": "branch_value",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "settings_imagePrefixpre-builder:settings_build_number",
            "imagePullPolicy": "Always",
            "name": "pre-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/gitTemp",
                "name": "git-temp",
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/timer",
                "name": "timer",
              },
            ],
          },
        ],
        "restartPolicy": "Never",
        "securityContext": Object {
          "runAsNonRoot": true,
        },
        "serviceAccountName": "serviceAccountName_value",
        "volumes": Array [
          Object {
            "name": "volume_name",
          },
          Object {
            "emptyDir": Object {},
            "name": "git-temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "build",
          },
          Object {
            "emptyDir": Object {},
            "name": "timer",
          },
        ],
      },
    },
    "ttlSecondsAfterFinished": 1234,
  },
}
`;

exports[`awsSecretSources with no volumes 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "labels": Object {
      "label_name": "label_value",
    },
    "name": "jobNamePrefix_value-object_name-latestCommit_value",
  },
  "spec": Object {
    "activeDeadlineSeconds": 1234,
    "backoffLimit": 1234,
    "completionMode": "NonIndexed",
    "completions": 1,
    "parallelism": 1,
    "template": Object {
      "metadata": Object {
        "labels": Object {
          "builder": "jobNamePrefix_value-object_name-latestCommit_value",
        },
        "name": "jobNamePrefix_value-object_name-latestCommit_value",
      },
      "spec": Object {
        "containers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "TYPE",
                "value": "type_value",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "imagePrefix_valuepost-builder:buildNumber_value",
            "imagePullPolicy": "Always",
            "name": "post-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/timer",
                "name": "timer",
                "readOnly": true,
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
            ],
          },
        ],
        "initContainers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "URL",
                "value": "url_value",
              },
              Object {
                "name": "BRANCH",
                "value": "branch_value",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "settings_imagePrefixpre-builder:settings_build_number",
            "imagePullPolicy": "Always",
            "name": "pre-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/gitTemp",
                "name": "git-temp",
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/timer",
                "name": "timer",
              },
            ],
          },
          Object {
            "env": Array [
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
            ],
            "imagePullPolicy": "Always",
            "name": "container_name",
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/build",
                "name": "build",
              },
            ],
          },
        ],
        "restartPolicy": "Never",
        "securityContext": Object {
          "runAsNonRoot": true,
        },
        "serviceAccountName": "serviceAccountName_value",
        "volumes": Array [
          Object {
            "emptyDir": Object {},
            "name": "git-temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "build",
          },
          Object {
            "emptyDir": Object {},
            "name": "timer",
          },
        ],
      },
    },
    "ttlSecondsAfterFinished": 1234,
  },
}
`;

exports[`awsSecretSources with options 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "labels": Object {
      "label_name": "label_value",
    },
    "name": "jobNamePrefix_value-object_name-latestCommit_value",
  },
  "spec": Object {
    "activeDeadlineSeconds": 1234,
    "backoffLimit": 1234,
    "completionMode": "NonIndexed",
    "completions": 1,
    "parallelism": 1,
    "template": Object {
      "metadata": Object {
        "labels": Object {
          "builder": "jobNamePrefix_value-object_name-latestCommit_value",
        },
        "name": "jobNamePrefix_value-object_name-latestCommit_value",
      },
      "spec": Object {
        "containers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "TYPE",
                "value": "type_value",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "imagePrefix_value-post-builder:buildNumber_value",
            "imagePullPolicy": "Always",
            "name": "post-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/timer",
                "name": "timer",
                "readOnly": true,
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
            ],
          },
        ],
        "initContainers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "URL",
                "value": "url_value",
              },
              Object {
                "name": "BRANCH",
                "value": "branch_value",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "settings_imagePrefixpre-builder:settings_build_number",
            "imagePullPolicy": "Always",
            "name": "pre-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/gitTemp",
                "name": "git-temp",
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/timer",
                "name": "timer",
              },
            ],
          },
          Object {
            "env": Array [
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
            ],
            "imagePullPolicy": "Always",
            "name": "container_name",
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/build",
                "name": "build",
              },
            ],
          },
        ],
        "restartPolicy": "Never",
        "securityContext": Object {
          "runAsNonRoot": true,
        },
        "serviceAccountName": "serviceAccountName_value",
        "volumes": Array [
          Object {
            "name": "volume_name",
          },
          Object {
            "emptyDir": Object {},
            "name": "git-temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "build",
          },
          Object {
            "emptyDir": Object {},
            "name": "timer",
          },
        ],
      },
    },
    "ttlSecondsAfterFinished": 1234,
  },
}
`;

exports[`awsSecretSources with ssh 1`] = `
Object {
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": Object {
    "labels": Object {
      "label_name": "label_value",
    },
    "name": "jobNamePrefix_value-object_name-latestCommit_value",
  },
  "spec": Object {
    "activeDeadlineSeconds": 1234,
    "backoffLimit": 1234,
    "completionMode": "NonIndexed",
    "completions": 1,
    "parallelism": 1,
    "template": Object {
      "metadata": Object {
        "labels": Object {
          "builder": "jobNamePrefix_value-object_name-latestCommit_value",
        },
        "name": "jobNamePrefix_value-object_name-latestCommit_value",
      },
      "spec": Object {
        "containers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "TYPE",
                "value": "type_value",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
            ],
            "image": "imagePrefix_valuepost-builder:buildNumber_value",
            "imagePullPolicy": "Always",
            "name": "post-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/timer",
                "name": "timer",
                "readOnly": true,
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
            ],
          },
        ],
        "initContainers": Array [
          Object {
            "args": Array [],
            "env": Array [
              Object {
                "name": "URL",
                "value": "url_value",
              },
              Object {
                "name": "BRANCH",
                "value": "branch_value",
              },
              Object {
                "name": "COMMIT",
                "value": "latestCommit_value",
              },
              Object {
                "name": "METRIC_NAME",
                "value": "metricName_value",
              },
              Object {
                "name": "METRIC_LABELS",
                "value": "{\\"metricLabelName\\":\\"metricLabelValue\\"}",
              },
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
              Object {
                "name": "JABOS_OPERATOR_URL",
                "value": "http://operator.settings_namespace:1234/",
              },
              Object {
                "name": "SSH_PASSPHRASE",
                "valueFrom": Object {
                  "secretKeyRef": Object {
                    "key": "passphrase_value",
                    "name": "secret_value",
                  },
                },
              },
              Object {
                "name": "SSH_KEY",
                "valueFrom": Object {
                  "secretKeyRef": Object {
                    "key": "key_value",
                    "name": "secret_value",
                  },
                },
              },
            ],
            "image": "settings_imagePrefixpre-builder:settings_build_number",
            "imagePullPolicy": "Always",
            "name": "pre-builder",
            "resources": Object {
              "limits": Object {
                "cpu": "500m",
                "memory": "500Mi",
              },
              "requests": Object {
                "cpu": "100m",
                "memory": "100Mi",
              },
            },
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/gitTemp",
                "name": "git-temp",
              },
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/timer",
                "name": "timer",
              },
            ],
          },
          Object {
            "env": Array [
              Object {
                "name": "NAMESPACE",
                "value": "object_namespace",
              },
              Object {
                "name": "NAME",
                "value": "object_name",
              },
              Object {
                "name": "OBJECT_UID",
                "value": "object_uid",
              },
            ],
            "imagePullPolicy": "Always",
            "name": "container_name",
            "securityContext": Object {
              "allowPrivilegeEscalation": false,
              "capabilities": Object {
                "drop": Array [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
              "runAsNonRoot": true,
            },
            "volumeMounts": Array [
              Object {
                "mountPath": "/tmp",
                "name": "temp",
              },
              Object {
                "mountPath": "/build",
                "name": "build",
              },
            ],
          },
        ],
        "restartPolicy": "Never",
        "securityContext": Object {
          "runAsNonRoot": true,
        },
        "serviceAccountName": "serviceAccountName_value",
        "volumes": Array [
          Object {
            "name": "volume_name",
          },
          Object {
            "emptyDir": Object {},
            "name": "git-temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "temp",
          },
          Object {
            "emptyDir": Object {},
            "name": "build",
          },
          Object {
            "emptyDir": Object {},
            "name": "timer",
          },
        ],
      },
    },
    "ttlSecondsAfterFinished": 1234,
  },
}
`;
